refactor: 테스트 코드 리스트 List.of로 변경