@@ -3,7 +3,6 @@ package racingcar;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -15,14 +14,14 @@ public class RaceGameTest {
     @DisplayName("경주 게임 객체를 생성한다")
     @Test
     void createRaceGame() {
-        List<String> carNames = Arrays.asList("car1", "car2", "car3");
+        List<String> carNames = List.of("car1", "car2", "car3");
         int gameCount = 3;
         RaceGame raceGame = new RaceGame(carNames, gameCount);
         assertThat(raceGame.cars()).hasSize(carNames.size());
         assertThat(raceGame.gameCount()).isEqualTo(gameCount);
     }
 
-    @DisplayName("자동차 수가 1 미만이면 예외 발생")
+    @DisplayName("자동차 수가 1 미만이면 예외 발생한다")
     @Test
     void carCountValidation() {
         assertThatThrownBy(() -> new RaceGame(List.of(), 3))
@@ -30,11 +29,10 @@ public class RaceGameTest {
                 .hasMessageContaining("자동차 대수");
     }
 
-    @DisplayName("게임 횟수가 1 미만이면 예외 발생")
+    @DisplayName("게임 횟수가 1 미만이면 예외 발생한다")
     @Test
     void gameCountValidation() {
-        List<String> carNames = Arrays.asList("car1", "car2", "car3");
-        assertThatThrownBy(() -> new RaceGame(carNames, 0))
+        assertThatThrownBy(() -> new RaceGame(List.of("car1", "car2", "car3"), 0))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("게임 횟수");
     }
@@ -42,14 +40,13 @@ public class RaceGameTest {
     @DisplayName("한 라운드에서 자동차가 고정값으로 이동한다")
     @Test
     void playRaceGame() {
-        List<String> carNames = Arrays.asList("car1", "car2");
         Random fixedRandom = new Random() {
             @Override
             public int nextInt(int bound) {
                 return 5;
             }
         };
-        RaceGame raceGame = new RaceGame(carNames, 3, fixedRandom);
+        RaceGame raceGame = new RaceGame(List.of("car1", "car2"), 3, fixedRandom);
         raceGame.playRound();
         for (Car car : raceGame.cars()) {
             assertThat(car.position()).isEqualTo(1);
@@ -59,7 +56,7 @@ public class RaceGameTest {
     @DisplayName("우승자를 구한다")
     @Test
     void getSingleWinner() {
-        RaceGame raceGame = new RaceGame(Arrays.asList("car1", "car2"), 3);
+        RaceGame raceGame = new RaceGame(List.of("car1", "car2"), 3);
         raceGame.cars().getFirst().moveIfPossible(4);
         List<String> winners = raceGame.getWinners();
         assertThat(winners).hasSize(1);
@@ -69,7 +66,7 @@ public class RaceGameTest {
     @DisplayName("공동 우승자를 구한다")
     @Test
     void getMultipleWinners() {
-        RaceGame raceGame = new RaceGame(Arrays.asList("car1", "car2"), 3);
+        RaceGame raceGame = new RaceGame(List.of("car1", "car2"), 3);
         List<String> winners = raceGame.getWinners();
         assertThat(winners).hasSize(2)
                 .containsExactly("car1", "car2");
